@@ -1,3 +1,8 @@
+2023-12-12  Eli Zaretskii  <eliz@gnu.org>
+
+	* gawkmisc.pc (optimal_bufsize): Return DEFBLKSIZE for directories
+	"opened" by the readdir extension.
+
 2023-12-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.tst: Regenerated.
