@@ -1,3 +1,8 @@
+2023-12-12  Eli Zaretskii  <eliz@gnu.org>
+
+	* io.c (redirect_string): Check registered parsers before failing
+	due to EISDIR.
+
 2023-12-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* debug.c (print_array): Fix printing of multidimensional arrays.
